--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : #CC0000;
+$secondary : #3B4CCA;
+$accent    : #FFDE00;
 
 $dark      : #1D1D1D;
 
